--- a/src/Components/AgiluxNavigation/AgiluxNavigation.css
+++ b/src/Components/AgiluxNavigation/AgiluxNavigation.css
@@ -22,7 +22,7 @@
 }
 
 .ant-drawer-content {
-    background: transparent !important;
+    background: rgba(0, 0, 0, 0.564) !important;
     backdrop-filter: blur(10px) !important;
     color: white;
 
