Updated outlead About Us Banner

--- a/src/Components/AboutUs/OutleadAbout.css
+++ b/src/Components/AboutUs/OutleadAbout.css
@@ -4,7 +4,7 @@
 
 .OutleadAboutUsContainer .TopContainer {
 
-    background-image: url("../../../public/Outlead\ Solutions\ Company\ Portfolio\ \(1\).png");
+    background-image: url("./Back.avif");
     background-size: cover;
     background-position: center;
 }
