--- a/src/Components/AboutUs/OutleadAbout.css
+++ b/src/Components/AboutUs/OutleadAbout.css
@@ -3,10 +3,10 @@
 }
 
 .OutleadAboutUsContainer .TopContainer {
-
     background-image: url("./Back.avif");
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .BlackTopOverlay {
@@ -17,22 +17,20 @@
     /* z-index: 5; */
     left: 0px;
 }
-.TopContainer div h2{
+
+.TopContainer div h2 {
     position: sticky;
 }
-.TopContainer h4{
+
+.TopContainer h4 {
+
     position: sticky !important;
 }
+
 @media (max-width:769px) {
     .AboutInfoContainer {
-        padding: 0rem 1rem;
+        padding: 2rem 1rem;
     }
 
-    .TopContainer {
-        height: 30vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 0rem 1rem;
-    }
+
 }
