--- a/src/Components/MinimalComponent/AgiluxProcess/AgiluxProcess.css
+++ b/src/Components/MinimalComponent/AgiluxProcess/AgiluxProcess.css
@@ -1,5 +1,5 @@
 .AgiluxProcessContainer {
-    
+
     position: absolute;
     right: 0px;
     left: 0px;
@@ -8,7 +8,8 @@
     justify-content: center;
     /* top: 0px; */
 }
-.anothercontainer{
+
+.anothercontainer {
     width: 80%;
 }
 
@@ -25,9 +26,15 @@
 }
 
 .BackOverlayImage {
+
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
+    background-image: url("./ProcessBack.avif");
+    height: 100vh;
+    background-size: cover;
+
 }
 
 .BackOverlayImage .BlackOverlay {
@@ -42,17 +49,46 @@
 .AgiluxProcessContainer .mySwiper {
     width: 100%;
 }
-.SwiperContentContainer h3{
+
+.SwiperContentContainer h3 {
     font-size: 30px;
 }
-.SwiperContentContainer{
+
+.SwiperContentContainer {
     width: 70%;
 }
-@media (max-width:769px){
-    .anothercontainer{
+
+@media (max-width:769px) {
+    .anothercontainer {
+        width: 90%;
+    }
+
+    .SwiperContentContainer {
         width: 100%;
     }
-    .SwiperContentContainer{
+
+    .BackOverlayImage {
+
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-image: url("./ProcessBack.avif");
+        height: 60vh;
+        background-size: cover;
+    }
+
+
+    .AgiluxProcessContainer {
+
+        position: absolute;
+        right: 0px;
+        left: 0px;
         width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* top: 0px; */
     }
 }
