--- a/src/Components/AboutUs/OutleadAbout.css
+++ b/src/Components/AboutUs/OutleadAbout.css
@@ -1,36 +1,53 @@
 .AboutInfoContainer {
-    padding: 2rem 8rem;
+  padding: 2rem 8rem;
 }
 
 .OutleadAboutUsContainer .TopContainer {
+  background-image: url("./Back.avif");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 60vh;
+  padding: 0rem 8rem;
+  position: relative;
+    overflow: hidden;
+}
+
+.BlackTopOverlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000000a5;
+  /* z-index: 5; */
+  left: 0px;
+}
+
+.TopContainer div h2 {
+  position: sticky;
+}
+
+.TopContainer h4 {
+  position: sticky !important;
+}
+
+@media (max-width: 769px) {
+  .AboutInfoContainer {
+    padding: 2rem 1rem;
+  }
+  .OutleadAboutUsContainer .TopContainer {
     background-image: url("./Back.avif");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-}
-
-.BlackTopOverlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #000000a5;
-    /* z-index: 5; */
-    left: 0px;
-}
-
-.TopContainer div h2 {
-    position: sticky;
-}
-
-.TopContainer h4 {
-
-    position: sticky !important;
-}
-
-@media (max-width:769px) {
-    .AboutInfoContainer {
-        padding: 2rem 1rem;
-    }
-
-
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    height: 60vh;
+    padding: 0rem 1rem;
+    position: relative;
+    overflow: hidden;
+  }
 }
