--- a/src/Components/AboutUs/OutleadAbout.css
+++ b/src/Components/AboutUs/OutleadAbout.css
@@ -10,10 +10,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 60vh;
+  height: 70vh;
   padding: 0rem 8rem;
   position: relative;
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .BlackTopOverlay {
@@ -27,6 +27,11 @@
 
 .TopContainer div h2 {
   position: sticky;
+  font-size: 60px;
+  font-weight: 100;
+  /* margin: 10px 0px; */
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .TopContainer h4 {
@@ -34,6 +39,15 @@
 }
 
 @media (max-width: 769px) {
+    .TopContainer div h2 {
+        position: sticky;
+        font-size: 30px;
+        font-weight: 100;
+        /* margin: 10px 0px; */
+        margin-top: 0px;
+        margin-bottom: 10px;
+      }
+      
   .AboutInfoContainer {
     padding: 2rem 1rem;
   }
@@ -45,7 +59,7 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    height: 60vh;
+    height: 50vh;
     padding: 0rem 1rem;
     position: relative;
     overflow: hidden;
