--- a/src/Components/AgiluxCoreServices/AgiluxServices.css
+++ b/src/Components/AgiluxCoreServices/AgiluxServices.css
@@ -87,6 +87,10 @@
     flex-wrap: wrap;
 }
 
+.InsideFlexContainer span{
+    font-size: 16px;
+    color: black;
+}
 @media (max-width:679px) {
     .InsideFlexContainer h5 {
         display: flex;
