--- a/src/Components/AgiluxHome/AgiluxHome.css
+++ b/src/Components/AgiluxHome/AgiluxHome.css
@@ -5,7 +5,7 @@
 }
 
 .BlackOverlay {
-    background-color: rgba(0, 0, 0, 0.509);
+    background-color: rgba(0, 0, 0, 0.086);
     position: absolute;
     height: 100%;
     bottom: 0px;
@@ -24,19 +24,22 @@
     position: absolute;
     z-index: 5;
     width: 50%;
-    height: 100vh;
-    top: 10%;
+    height: 80%;
+    top: 0%;
+    bottom: 10%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
 }
 
 .AgiluxHomeContentContainer .mySwiper {
     height: 23px;
     width: 100%;
-    color: white;
 }
 
+#SwiperText{
+    color: black;
+}
 
 .AgiluxHomeContentContainer .TextAnimated {
     text-transform: uppercase;
@@ -47,6 +50,7 @@
     gap: 20px;
     transition: .5s;
     align-items: center;
+    color: black;
 
 }
 
@@ -98,6 +102,17 @@
     font-size: 30px;
 }
 @media (max-width:769px) {
+    .ContactUsbtn a {
+        display: flex;
+        gap: 20px;
+        transition: .5s;
+        align-items: center;
+        color: rgb(255, 255, 255);
+    
+    }
+    #SwiperText{
+        color: rgb(255, 255, 255);
+    }
     #PcOnly {
         display: none;
     }
