--- a/src/Components/AboutUs/OutleadAbout.css
+++ b/src/Components/AboutUs/OutleadAbout.css
@@ -1,20 +1,7 @@
-.AboutInfoContainer {
+.AboutUsContainer {
   padding: 2rem 8rem;
 }
 
-.OutleadAboutUsContainer .TopContainer {
-  background-image: url("./Back.avif");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 70vh;
-  padding: 0rem 8rem;
-  position: relative;
-  overflow: hidden;
-}
 
 .BlackTopOverlay {
   position: absolute;
@@ -38,30 +25,172 @@
   position: sticky !important;
 }
 
+.InsideLineContainer {
+  width: 200px;
+  height: 100vh;
+  border-bottom: 1px solid rgb(240, 240, 240);
+  background-color: white;
+  border-right: 1px solid rgb(242 242 242);
+}
+
+.parentAbsoluteContainer {
+  display: flex;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.JustHeightContainer {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  align-items: centers;
+}
+
+
+.AboutUsContent {
+  position: absolute;
+  top: -20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
+.AboutUsContent h1 {
+  color: black;
+  font-weight: 600;
+  font-size: 7rem;
+  text-transform: uppercase;
+  position: relative;
+  line-height: 10rem;
+}
+.AboutUsContent p{
+  color: black;
+}
+
+#AboutUsVideo {
+  position: absolute;
+  height: 48%;
+  margin: 0rem 1rem;
+  border-radius: 30px;
+}
+#PhotoshopIconSet{
+    width: 150px;
+    position: absolute;
+    left: -2rem;
+}
+.ParatextAbout{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.ParatextAbout p{
+  width: 40%;
+  line-height: 30px;
+  /* font-weight: 600; */
+}
+.OutleadAboutUsContainer .TopContainer{
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+.OutleadAboutUsContainer .TopContainer h2{
+  color: black;
+}
+.OutleadPartnersDetails{
+  margin:5rem 0rem;
+
+}
+.ProgressOutleadContentContainer{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: black !important;
+}
+.ProgressOutleadContentContainer h2{
+  color: black;
+}
+.progressBarContainer ul {
+  padding: 0px;
+}
+.progressBarContainer ul li{
+  list-style: none;
+  margin: 10px 0px;
+}
+.progressBarContainer ul>div{
+  margin: 30px 0px;
+}
+.progressBarContainer .progressShow{
+  width: 100%;
+  height: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.356);
+  padding: 3px 5px;
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+}
+.progressBarContainer .progressShow hr{
+  opacity: 1;
+  width: 60%;
+  height: 1px;
+  border: 1px solid black;
+  margin: 0px;
+  background-color: black;
+}
+
+@media (min-width:769px) and (max-width:1200px){
+  .AboutUsContent h1{
+    color: black;
+  font-weight: 600;
+  font-size: 4rem;
+  text-transform: uppercase;
+  position: relative;
+  line-height: 7rem;
+  }
+}
 @media (max-width: 769px) {
-    .TopContainer div h2 {
-        position: sticky;
-        font-size: 30px;
-        font-weight: 100;
-        /* margin: 10px 0px; */
-        margin-top: 0px;
-        margin-bottom: 10px;
-      }
-      
+  #PhotoshopIconSet{
+    width: 20%;
+    margin-top: -1rem;
+    position: absolute;
+    left: -1rem;
+}
+  .AboutUsContent h1{
+    color: black;
+  font-weight: 600;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  position: relative;
+  line-height: 3rem;
+  }
+  .AboutUsContainer {
+    padding: 2rem 1rem;
+  }
+  
+  .ParatextAbout p{
+    width: 100%;
+    padding: 0rem 1rem;
+  }
+  .TopContainer div h2 {
+    position: sticky;
+    font-size: 30px;
+    font-weight: 100;
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
+
   .AboutInfoContainer {
     padding: 2rem 1rem;
   }
-  .OutleadAboutUsContainer .TopContainer {
-    background-image: url("./Back.avif");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    height: 50vh;
-    padding: 0rem 1rem;
-    position: relative;
-    overflow: hidden;
-  }
+
+
 }
