--- a/src/Components/AgiluxNavigation/AgiluxNavigation.css
+++ b/src/Components/AgiluxNavigation/AgiluxNavigation.css
@@ -22,9 +22,9 @@
 }
 
 .ant-drawer-content {
-    background: rgba(0, 0, 0, 0.564) !important;
+    background: rgba(0, 0, 0, 0.864) !important;
     backdrop-filter: blur(10px) !important;
-    color: white;
+    color: black;
 
 }
 
@@ -187,7 +187,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: orange;
     /* Fill color */
     z-index: 0;
     /* Place it behind the content */
@@ -198,7 +198,6 @@
 /* Change the fill effect on hover */
 .AnimatedNavigationAnimation>div:first-child .ant-collapse-item:hover::before {
     top: 0;
-    /* Move the fill from bottom to top */
 }
 
 /* Style the link inside with color and ensure it appears above the fill */
@@ -206,7 +205,7 @@
     position: relative;
     z-index: 1;
     /* Ensure the text stays above the fill effect */
-    color: white;
+    color: rgb(255, 255, 255);
     /* Initial text color */
     transition: color 0.5s ease-in-out;
     /* Smooth color change */
@@ -246,12 +245,13 @@
 .ImageBottomContent {
     padding: 20px;
 }
-.ant-drawer-header{
+
+.ant-drawer-header {
     border: none !important;
 }
 
 
-@media (max-width:769px){
+@media (max-width:769px) {
     .AnimatedNavigationAnimation>div:first-child .ant-collapse-item {
         padding: 20px 30px;
         border-radius: 0px;
