--- a/src/Components/OutleadServices/OutleadServices.css
+++ b/src/Components/OutleadServices/OutleadServices.css
@@ -10,6 +10,10 @@
     #CommonServices .TopContainer {
         padding: 8rem 1rem;
     }
+    .ImageHeightContainer {
+        height: 100vh;
+    }
+    
 
 }
 
