--- a/src/Components/AgiluxHome/AgiluxHome.css
+++ b/src/Components/AgiluxHome/AgiluxHome.css
@@ -122,6 +122,8 @@
     
     .HomePageAgiluxHeading{
         display: block;
+        font-size: 35px;
+        
     }
     #HomePage{
         display: flex;
