--- a/src/Components/AgiluxHome/AgiluxHome.css
+++ b/src/Components/AgiluxHome/AgiluxHome.css
@@ -39,6 +39,7 @@
 
 #SwiperText{
     color: black;
+    font-size: 20px;
 }
 
 .AgiluxHomeContentContainer .TextAnimated {
@@ -52,6 +53,10 @@
     align-items: center;
     color: black;
 
+}
+.ContactUsbtn p{
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .ContactUsbtn a svg {
