--- a/src/Components/OutleadServices/OutleadServices.css
+++ b/src/Components/OutleadServices/OutleadServices.css
@@ -24,6 +24,7 @@
     margin: auto;
     display: flex;
     transition: width 0.3s ease, border-radius 0.3s ease;
+    scroll-behavior: smooth;
 }
 
 /* .HeadingTagsContainer{
